# papa

./: README.md  requirements.txt  stich-prompt.txt
.cursor/rules/: cursor-intructions.mdc
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  AI_API_ROUTES_DOCUMENTATION.md  AI_IMPLEMENTATION_SUMMARY.md  AI_TESTING_GUIDE.md  API_DOCUMENTATION_INDEX.md  AdaptiveDifficultySystem.py  COMPLETE_API_DOCUMENTATION.md  ContentValidationAndScoring.py  ENDPOINT_TESTING_RESULTS.md  FASTAPI_IMPLEMENTATION_SUMMARY.md  FINAL_COMPLETION_REPORT.md  LearningPathGeneration.py  README.md  RealtimeTaskProcessing.py  SESSION_SUMMARY.md  SemanticRetrieval.py  TASKS_AND_SCRIPTS_SUMMARY.md  TESTING_RESULTS.md  celerybeat-schedule-shm  celerybeat-schedule-wal  create_sample_data.py  database.md  direct_test.py  fix_database_schema.py  pyproject.toml  run.py  test_ai.sh  test_ai_demo.py  test_ai_endpoints.py  test_ai_simple.py  test_all_repositories.py  test_endpoints.py  test_jwt_auth.py  test_models.py  test_models_simple.py  test_repository_no_auth.py  test_server_startup.py  test_tasks_and_scripts.py  test_user_repository.py
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: .gitkeep  17f64331294d_add_all_remaining_tables.py  26efbe1a26cf_create_user_table.py  4156c3e39310_update_user_table_admin_column.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/app/models/: __init__.py  analytics.py  associations.py  base.py  course_material.py  practice.py  question.py  subject.py  user.py
backend/app/repositories/: __init__.py  analytics_repository.py  base.py  practice_repository.py  question_repository.py  subject_repository.py  user_repository.py
backend/app/schemas/: analytics.py  auth.py  base.py  practice.py  question.py  subject.py  user.py
backend/app/services/: base.py  (+7 more)
backend/requirements/: base.txt  test.txt
backend/scripts/: backup_db.py  init_db.py  migrate_data.py  process_questions.py  seed_data.py
frontend/: App.js  README.md  package-lock.json  package.json
mpa/: AI-pipeline-architecture.txt  Dockerfile  DocumentProcessing.py  GeminiService.py  PersonalisedEngine.py  RAG.py  backend-file-structure.txt  chromaDatabase.py  create_admin.py  docker-compose.yml  pyproject.toml  test_app.py  test_oauth2.py  text-processsor.py
(+91 files in other folders)
